--- a/AspDotNet/appsettings.Development.json
+++ b/AspDotNet/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "tuhngofield": {
+    "dateofbirth": 1
   }
 }
