--- a/AspDotNet/appsettings.json
+++ b/AspDotNet/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "tuhngofield": {
+    "dateofbirth": "161199"
+  }
 }
