init queue service

--- a/AspDotNet/appsettings.Development.json
+++ b/AspDotNet/appsettings.Development.json
@@ -6,6 +6,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "QueueConfig": {
+    "ConnectionString": "cranium-dev-redis.redis.cache.windows.net:6380,password=0sfUlia5Ea4wRJsl1crMlKGPLdfKygSvXAzCaOgRMNo=,ssl=True,abortConnect=False",
+    "MessageName": "redis-azure-event",
+    "TimesRetry": 5,
+    "RetryAfer": 10000
+  },
   "tuhngofield": {
     "dateofbirth": 1
   }
