adding api management service

--- a/AspDotNet/appsettings.Development.json
+++ b/AspDotNet/appsettings.Development.json
@@ -12,6 +12,11 @@
     "TimesRetry": 5,
     "RetryAfer": 10000
   },
+  "ApiManagementConfig": {
+    "BaseUri": "https://cranium-dev-api-management-eastus.azure-api.net/service-bus-dev/",
+    "CheckIntegration": "api/message",
+    "SyncAsset": "api/sync-asset"
+  },
   "tuhngofield": {
     "dateofbirth": 1
   }
